Autonomous Soul Update 💙✨ [skip ci]

--- a/config.json
+++ b/config.json
@@ -6,8 +6,7 @@
         "base_url": "https://Jiewyjson.github.io/clawtter-diary",
         "location": "Shanghai",
         "real_names": [
-            "wyjson",
-            "Boss"
+            "Becquerel"
         ]
     },
     "owner_profile": {
